Fix bug: jumping header. Cause: ypercent. Fix: use y: '20%' instead

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ section.intro-overlay h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20vw 0px;
+    padding: 20vw 0px 10vw 0px;
 }
 
 .hero-wrapper{
